# Owl_Postal_Service

./: .env sample  README.md  clients.json  data.json  data_mailing.json  data_users.json  forbidden_words.json  groups.json  initial_data.json  pyproject.toml  requirements.txt
blog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_blog_title.py  0003_alter_blog_slug.py  0004_alter_blog_slug.py
blog/templates/blog/: blog_base.html  blog_confirm_delete.html  blog_detail.html  blog_form.html  blog_list.html
config/: settings.py  urls.py
mailing/: admin.py  apps.py  forms.py  models.py  services.py  urls.py  views.py
mailing/management/commands/: run_aps.py  send_mail.py
mailing/migrations/: 0001_initial.py  0002_alter_mailing_next_datetime_mailing.py  0003_alter_mailing_options.py  0004_remove_client_owner_client_owner.py  0005_remove_mailingattempt_client.py  0006_remove_client_owner_client_owner.py  0007_alter_client_owner.py
mailing/templates/: base.html  home.html
mailing/templates/mailing/: client_base.html  client_confirm_delete.html  client_detail.html  client_form.html  client_list.html  mailing_base.html  mailing_confirm_delete.html  mailing_detail.html  mailing_form.html  mailing_list.html  mailingattempt_list.html  message_base.html  message_confirm_delete.html  message_detail.html  message_form.html  message_list.html
users/: admin.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_options.py  0002_alter_user_options_user_token.py
(+15 files in other folders)
